--- a/src/data/team/05.md
+++ b/src/data/team/05.md
@@ -1,29 +1,25 @@
 # Headline
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-Curabitur vehicula odio ac felis aliquet, a accumsan neque porttitor. 
+Jing Li - Creative AI Eurasia Pacific
 
 ## Full Details
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt, sem vitae suscipit accumsan, justo ligula sollicitudin libero, a dignissim tellus lorem a erat.  
-Nulla facilisi. Vivamus lacinia, nisi sit amet rhoncus vulputate, orci ligula tincidunt libero, id gravida tellus magna a lorem.  
-Etiam accumsan, justo vel imperdiet tincidunt, sapien augue tristique orci, sed tempor odio diam nec nulla.  
-Phasellus sit amet ex sed arcu iaculis volutpat. Sed a ligula ut nibh scelerisque iaculis.  
-Suspendisse ac orci gravida, fermentum nunc non, dignissim nulla. Proin sit amet convallis nibh.  
-Nam ac fermentum ex. Suspendisse potenti. Maecenas eget augue id magna lacinia lacinia.  
-In ut semper justo. Vestibulum ac leo mi. Proin condimentum nunc et velit ornare pretium.  
-Quisque ultricies orci a nulla gravida, nec efficitur nunc fermentum.  
-Ut at augue eget ante fermentum malesuada. Integer varius purus et elit vulputate, at lobortis mi fringilla.  
-Nam ac nisi eu libero cursus iaculis nec non nisl.  
-Aliquam erat volutpat. Curabitur rhoncus diam quis lorem viverra, sit amet bibendum tortor viverra.  
-Fusce imperdiet, diam vitae tempor pharetra, libero lacus blandit purus, in congue leo nunc in sem.  
-Curabitur vel orci rutrum, posuere mi nec, iaculis tellus.  
-Maecenas eu leo sed tellus suscipit bibendum.  
-Vivamus rutrum, purus at lacinia tincidunt, nibh velit posuere nisi, nec imperdiet nisi arcu in velit.  
-Sed fermentum, turpis ut accumsan elementum, odio est efficitur arcu, vitae porttitor odio nulla ac libero.  
-Donec sed massa eget leo vehicula volutpat in id purus.  
-Integer ornare eros id turpis commodo, et viverra sapien sodales.  
-Morbi at diam eget turpis iaculis dapibus.  
-Donec pretium lorem vitae ante vulputate, at bibendum elit porttitor.  
-Nullam viverra nisi in velit imperdiet finibus.  
-Aenean euismod feugiat lorem, id pulvinar est vehicula at.  
+Creative AI Technologist | Innovator | Advocate for AI Equity
+Jing Li is a Creative AI Technologist with a unique background that bridges business, technology, and community-driven innovation. After more than a decade in the fashion industry, where she led design, manufacturing, and sustainable sourcing, Jing made a bold career change into data science and artificial intelligence during her maternity break. Since then, she has been dedicated to making emerging technologies more accessible and meaningful for everyone.
+Over the past year, Jing has worked at the MediaCity Immersive Technology Innovation Hub (MITIH) and Dreamlab, supporting SMEs and creatives to experiment with cutting-edge tools including Retrieval-Augmented Generation (RAG), AI agents, creative AI (text-to-image/video), and multi-agent chatbot systems. She has collaborated on research with academic partners and industry leaders contributing to technical blueprints and user-centred prototyping.
+Jing is passionate about responsible innovation, AI equity, and using technology to tackle real-world challenges — from sustainability and mental health to local economic development. She has led impact-focused data projects, such as evaluating wellbeing programs for perinatal mums through survey design, analysis, and data visualisation.
+As a former business owner who once ran a sustainable clothing wholesale brand using deadstock and recycled fabrics, she understands the practical challenges faced by SMEs. She brings this perspective into her AI work by helping businesses innovate in resourceful, sustainable ways.
+Currently part of a 25-person technologist collective at Dreamlab, Jing is co-developing hands-on workshops, podcasts, and digital content aimed at demystifying AI for general audiences. Her goal is to empower more people — especially those outside of tech — to explore, question, and create with AI.
+Core Skills & Tools
+AI & Data Science
+ Retrieval-Augmented Generation (RAG), multi-agent systems, prompt engineering, AI avatar systems, LLM experimentation, ComfyUI, Stable Diffusion, LangChain, LoRA training
+No-Code & Prototyping
+ Vibe coding platforms, RAGFlow, collaborative prototyping, usability testing
+Data Analysis & Visualisation
+ Power BI, Excel, survey design, data cleaning, impact evaluation
+Infrastructure & Deployment
+ Docker, HP Boost, cloud computing (AWS), GPU resource management
+Collaboration & Knowledge Exchange
+ Working across academia, industry, and community sectors to co-create research and innovation projects
+Languages
+ English (fluent), Mandarin (native), Cantonese (conversational)
