--- a/public/data/team/07.md
+++ b/public/data/team/07.md
@@ -4,6 +4,6 @@ Jon Cooke - Senior Dev: Full Stack
 
 ## Full Details
 
-Jon is an experienced Full Stack Developer with over two decades of work in both front-end and back-end development. He is highly proficient in modern programming languages and frameworks, including JavaScript, TypeScript, Python, Java, Go, Node.js, React, Angular, Vue, and Django.
+Jon is an experienced Full Stack Developer with over two decades of work in both front-end and back-end development. He is highly proficient in modern programming languages and frameworks, including JavaScript, TypeScript, Node.js, React, C, C++, SQL, and Rust. 
 
 Jon has a strong background in building scalable, secure, and maintainable applications across a range of industries. He is skilled in cloud-native development, microservices architecture, and DevOps practices, delivering practical solutions tailored to project needs.
