more biography updates

--- a/public/data/team/11.md
+++ b/public/data/team/11.md
@@ -1,3 +1,17 @@
 # Headline
+Arpana Nandakumar – Alternate Realities Sorceress & Community Engagement Officer
 
-Arpana Nandakumar  - this is a placeholder
+## Full Details
+
+Community Engagement Officer at MediaCity Immersive Technologies Innovation Hub.
+Expertise: Research and development across XR & AI, real-time/technical art in Unreal Engine 5 and Unity, advanced haptics, Metahumans, VisionOS and OpenXR integration, prompt engineering. Skilled in event management, social media outreach, and building partnerships with BBC, Dock10 and SMEs in CGI, VFX, virtual production and gaming.
+Notable Work:
+
+Official UN Women UK participant at CSW69, driving gender-equality dialogues.
+
+Volunteer staff at Slush 2024 Helsinki, hosted partner events and fronted Indo-Finland Market Access Programme sessions.
+
+Speaker and mentor at AWE EU 2024, fostering mixed-reality innovation and industry collaboration.
+
+Coordinated Apple Vision Pro demos for the Parliamentary Under Secretary of State for the Future Digital Economy.
+Affiliations: Sheffield Hallam University (MA Immersive Art, distinction); XR Bootcamp (XR Professional); Innovate UK’s Greater Manchester Innovation Accelerator; Ida XR Studio.
