--- a/public/data/team/14.md
+++ b/public/data/team/14.md
@@ -1,3 +1,15 @@
 # Headline
 
-Haydn Secker - this is a placeholder
+Haydn Secker – Animation Producer
+
+## Full Details
+
+Expertise: Over 25 years’ experience in stop-frame animation, writing, directing and producing across film, television, advertising and computer games. Skilled in every stage from script development through to on-set animation direction.
+Notable Work:
+
+Producing Bernard, a BFI-funded animated short under the Lottery Short Film initiative.
+
+Led animation production on CBeebies Christmas promos (2019) and ASDA’s 2019 Christmas TV campaign (for Stink Films).
+
+Assistant Director on Mackinnon & Saunders’ children’s series Jessy and Nessy (Amazon Studios); stop-frame animator on BAFTA-nominated Moon and Me; Studio Director on Raa Raa the Noisy Lion (NBCUniversal/CBeebies) and Postman Pat SDS (DreamWorks/CBeebies).
+Affiliations: Gadzooks Studio; Mackinnon & Saunders Ltd.; BAFTA-recognised productions; Middlesex University (BA Design & Visual Communications, Animation).
