--- a/public/data/team/15.md
+++ b/public/data/team/15.md
@@ -1,3 +1,18 @@
 # Headline
 
-Garth Williams - this is a placeholder
+Garth Williams – Motion Capture Super Hero & Creative Director
+
+## Full Details
+
+Motion Capture Super Hero (Freelance) at DreamLab’s MediaCity Immersive Technologies Innovation Hub.
+
+Creative Director at Safety Catch Ltd., leading collaborative story-making, theatre and outdoor arts.
+Expertise: Specialises in immersive installation design, Unreal Engine real-time pipelines, live performance capture with Rokoko Smartsuit V2 (Coil Pro trackers, Smartgloves, Headrig), Isadora integration, video editing and interactive media workshops.
+Notable Work:
+
+Delivering bespoke motion-capture services for animation, VFX and live-streamed performances.
+
+Designing and directing theatre, film and video-game experiences for over 20 years.
+
+Expanding DreamLab’s community training programme, co-hosting AI- and XR-focused drop-in sessions at MediaCityUK Content Studios.
+
