--- a/public/data/team/12.md
+++ b/public/data/team/12.md
@@ -1,3 +1,16 @@
 # Headline
 
-Bradley Harris  - this is a placeholder
+Bradley Harris – Chief Executive Officer, Krygon Studios
+
+## Full Details
+
+Role: CEO of Krygon Studios, leading the studio’s creative vision and business strategy.
+Expertise: Over 15 years in games and computer-graphics industries; specialises in 3D poly modelling, texturing, lighting and rendering for AAA console, mobile and franchise titles (including first-party Xbox and Star Wars). Adept at translating conceptual briefs into compelling visual narratives.
+Notable Work:
+
+Ghost Town Games contract artist (2020–24), Flipbook Studio and Factory Fifteen collaborations.
+
+Lead Artist at Immotion Group plc, delivering high-fidelity assets for real-time and pre-visualisation pipelines.
+
+Studio project nominated for six Sports Emmys, showcased on the Sphere Las Vegas for UFC 306.
+Affiliations: University of Hertfordshire (BA Digital Animation, 2:1); Krygon Studios; Nexus Studios partnerships; industry speaker and mentor.
