--- a/public/data/team/13.md
+++ b/public/data/team/13.md
@@ -1,3 +1,16 @@
 # Headline
 
-Daniel Maktabi - this is a placeholder
+Daniel Maktabi – Technical Artist & Creative Technologist
+
+## Full Details
+
+Technical Artist at DreamLab; former Asset Developer at Immersify Education; Technical Art Intern at MediaCity Immersive Technologies Innovation Hub.
+Expertise: Digital sculpting in ZBrush, real-time rendering and look development in Unreal Engine, 3D pipelines for characters, props and environments, facial motion capture, photogrammetry, Metahuman workflows, digital twins for virtual production.
+Notable Work:
+
+Presented real-time facial mocap research at Manchester Animation Festival 2024 and MAF Marketplace.
+
+Developed digital-twin assets and streamlined pipelines for educational AR/VR platforms at Immersify Education.
+
+Technical art support for Innovate UK’s MITIH programme, enabling SMEs to secure funding through high-impact visual pitches.
+Affiliations: DreamLab; University of Salford (MA Animation, Interactive Technology, Video Graphics & Special Effects, distinction); Art University of Tabriz (BEng Industrial Design); MAF; Unreal Engine community.
