full staff loadout

--- a/public/data/team/17.md
+++ b/public/data/team/17.md
@@ -1,9 +1,10 @@
 # Headline
+
 Christian G H Frost – Immersive Technical Artist (“Master of Puppets”)
 
 ## Full Details
 
-Founder and Technical Artist at CGH Frost; Creative Delivery Lead at IN4 Group; Unity Associate Instructor.
+Founder and Technical Artist; Creative Delivery Lead at IN4 Group; Unity Associate Instructor.
 Expertise: 3D asset creation, rigging and procedural animation, motion capture, real-time pipelines in Unreal Engine, Unity and Blender; VR platform development for cybersecurity education; digital content creation using traditional and digital media.
 Notable Work:
 
@@ -14,4 +15,3 @@ Led creative pipelines and interactive tool development for educational VR at IN
 Delivered courses as a Unity Associate Instructor and supported tech-course facilitation as a Digital Technician.
 
 Freelance 3D artist at FrostyDoodlz, producing bespoke character and pet portraits in digital and traditional media.
-Affiliations: CGH Frost; IN4 Group; FrostyDoodlz; Royal Army Veterinary Corps (Diploma Animal Management).
