--- a/public/data/team/18.md
+++ b/public/data/team/18.md
@@ -1,3 +1,8 @@
 # Headline
 
-Derek Hales - this is a placeholder
+Derek Hales - Cyberphysical Pataphysicist 
+
+## Full Details
+
+Architect and R&D director with 30+ years’ experience exploring speculative practices, XR/web3/spatial computing and digital twinning. PhD in Design Fiction (RCA), long track record in creative-technology policy, open innovation and practice-based research across architecture, film and immersive media.
+
