--- a/public/data/team/19.md
+++ b/public/data/team/19.md
@@ -1,3 +1,7 @@
 # Headline
 
-Noelle Nurdin - this is a placeholder
+Noelle Nurdin - Immersive Hyperpop Producer & Spatial Audio 
+
+## Full Details
+
+Welsh-Ukrainian electronic artist specializing in glitchy hyperpop, 9.1 spatial audio live sets and AV installations. Recent residencies at Glasshouse International and FutureEverything; releases on BMG’s “Home of Happy” and features on BBC Introducing and Disclosure’s playlists.
