--- a/public/data/team/20.md
+++ b/public/data/team/20.md
@@ -1,3 +1,7 @@
 # Headline
 
-Annabeth Robinson - this is a placeholder
+Annabeth Robinson - Creative Technologist
+
+## Full Details
+
+Creative technologist and filmmaker with 20+ years’ teaching experience across animation, immersive technologies and game platforms. SFHEA-accredited, led “Educating Animators” conference (now Animated Connections) and award-winning serious-games researcher.
