--- a/public/data/team/21.md
+++ b/public/data/team/21.md
@@ -1,3 +1,7 @@
 # Headline
 
-Lewis Hackett - this is a placeholder
+Lewis Hackett -  Blockchain Advisor & AR/VR Developer
+
+## Full Details
+
+Multi-disciplinary creative with 15+ years directing film crews, motion graphics and interactive experiences. Skilled in fine art, photography, VFX, 2D/3D animation, sound editing and branding, translating imaginative concepts into polished productions.
