--- a/public/data/team/22.md
+++ b/public/data/team/22.md
@@ -1,3 +1,7 @@
 # Headline
 
-Dr Umran Ali - this is a placeholder
+Dr Umran Ali - Creative Media
+
+## Full Details
+
+PhD in Games Design & Virtual Environments; 15+ years’ experience leading curriculum and research in animation, serious games and digital landscapes. Chair of AniGame festival, developer of Virtual Landscapes series, and published on generative-agent simulacra.
