--- a/public/data/team/23.md
+++ b/public/data/team/23.md
@@ -1,3 +1,7 @@
 # Headline
 
-James Spiers - this is a placeholder
+James Spiers - : Partnerships & Business Development
+
+## Full Details
+
+Economic-development specialist with 12+ years driving digital & tech innovation projects. Expert in stakeholder engagement, grant sourcing and ecosystem-building across immersive technologies, gaming and creative industries.
