--- a/public/data/team/24.md
+++ b/public/data/team/24.md
@@ -1,3 +1,7 @@
 # Headline
 
-Natasha Stott - this is a placeholder
+Natasha Stott - Researcher & Artistic Producer
+
+## Full Details
+
+PhD in Arts & Media exploring real-time dialogic interplay between movement and projection. Associate Fellow HEA, trustee of Touchdown Dance, international exhibitor and award-winning practitioner in intermedial immersive performance.
