--- a/public/data/team/25.md
+++ b/public/data/team/25.md
@@ -1,3 +1,7 @@
 # Headline
 
-Chris Croft - this is a placeholder
+Chris Croft - Video Producer & Director
+
+## Full Details
+
+Producer/director leading creative video campaigns across music, sport and fashion. Notable credits include social edits for Rio Ferdinand’s “Rio Meets” series and in-field shoots with Fabrizio Romano for JD Sports’ “The Breakdown.”
