--- a/public/data/team/26.md
+++ b/public/data/team/26.md
@@ -1,3 +1,7 @@
 # Headline
 
-Thadeous Matthews - this is a placeholder
+Thadeous Matthews - Technical Artist & Broadcast Operator
+
+## Full Details
+
+Bio: Senior technical operator and Unreal/TouchDesigner artist, blending multi-camera directing with 3D design and motion-graphics. Hands-on in broadcast gallery launches, VR staging and immersive performance-capture projects.
