--- a/public/data/team/27.md
+++ b/public/data/team/27.md
@@ -1,3 +1,8 @@
 # Headline
 
-Dr. David Tully - this is a placeholder
+Dr. David Tully - Unreal Engine / XR Specialist
+
+## Full Details
+
+PhD in Computer Science leveraging game-engine tech for GIS visualization, AR/VR and Web3D. Six years lecturing in serious games and leading Scenegraph’s creative-tech studio on AI avatars, VR wellbeing and spatial-computing innovations.
+
