--- a/public/data/team/29.md
+++ b/public/data/team/29.md
@@ -1,3 +1,8 @@
 # Headline
 
-Bernard Steer - this is a placeholder
+Bernard Steer - Spatial Audio Consultant
+
+## Full Details
+
+Organization: Microcosmaudio Ltd / University of Salford / DreamLab, Manchester, UK
+Bio: ACI-certified Pro Tools trainer and 20+ year creative-tech demonstrator. Founder of compact Dolby Atmos/DTS-X monitoring solutions, and lead spatial-audio consultant supporting immersive-tech residencies at MediaCity’s DreamLab.
