--- a/public/data/team/28.md
+++ b/public/data/team/28.md
@@ -1,3 +1,7 @@
 # Headline
 
-Cheryl Blake - this is a placeholder
+Cheryl Blake - Stop-Motion Animator & Community Musician
+
+## Full Details
+
+MA Animation (Distinction) graduate and Ray Harryhausen Award winner. Creator of award-winning short films addressing grief, and veteran workshop leader in inclusive community music, percussion and animation.
