--- a/public/data/team/24.md
+++ b/public/data/team/24.md
@@ -1,7 +1,11 @@
 # Headline
 
-Natasha Stott - Researcher & Artistic Producer
+Natasha DreamLab - Researcher & Artistic Producer
 
 ## Full Details
 
-PhD in Arts & Media exploring real-time dialogic interplay between movement and projection. Associate Fellow HEA, trustee of Touchdown Dance, international exhibitor and award-winning practitioner in intermedial immersive performance.
+Researcher, practitioner, and facilitator specialising in intermedial performance, XR environments, and embodied improvisation. Her PhD at the University of Salford led to the development of the Performance Projection Paradigm, a dialogic framework exploring interactions between the moving body and projected image.
+
+With over 20 years of international experience, Natasha has delivered movement facilitation, project leadership, and research-led performance across education and community settings. She is the founder of MindScape Lab, an XR initiative focused on immersive well-being, and has taught as a Dialogic Design for Dance tutor at the University of Salford and the China Academy of Arts.
+
+Her work has been exhibited globally, including at Future Lab (West Bund, China) and Continuum (Manchester & Kuala Lumpur), and recognised as best practice by the University of Salford. Natasha is also Chair and Trustee of Touchdown Dance, and an advocate for interdisciplinary, inclusive, and embodied learning.
