Once over on the auto bios

--- a/public/data/team/02.md
+++ b/public/data/team/02.md
@@ -4,8 +4,7 @@ Pete Woodbridge - Chief Technical Officer
 
 ## Full Details
 
-Pete Woodbridge – Creative Technologist
-Role: Creative Technologist, Unreal Engine Technical Artist, Virtual Production Producer
+Creative Technologist, Unreal Engine Technical Artist, Virtual Production Producer
 
 Expertise: Works across creative AI applications, interactive and immersive experiences, and virtual production.
 
