--- a/public/data/team/06.md
+++ b/public/data/team/06.md
@@ -1,6 +1,6 @@
 # Headline
 
-Marco E. Ghilardi - Simulation and Modelling Expert & MD at QuasiScience
+Marco E. Ghilardi - Simulation and Modelling Expert 
 
 ## Full Details
 
