--- a/public/data/team/11.md
+++ b/public/data/team/11.md
@@ -1,10 +1,10 @@
 # Headline
-Arpana Nandakumar – Alternate Realities Sorceress & Community Engagement Officer
+
+Arpana Nandakumar – Alternate Realities Sorceress & Public Engagement
 
 ## Full Details
 
-Community Engagement Officer at MediaCity Immersive Technologies Innovation Hub.
-Expertise: Research and development across XR & AI, real-time/technical art in Unreal Engine 5 and Unity, advanced haptics, Metahumans, VisionOS and OpenXR integration, prompt engineering. Skilled in event management, social media outreach, and building partnerships with BBC, Dock10 and SMEs in CGI, VFX, virtual production and gaming.
+Research and development across XR & AI, real-time/technical art in Unreal Engine 5 and Unity, advanced haptics, Metahumans, VisionOS and OpenXR integration, prompt engineering. Skilled in event management, social media outreach, and building partnerships with BBC, Dock10 and SMEs in CGI, VFX, virtual production and gaming.
 Notable Work:
 
 Official UN Women UK participant at CSW69, driving gender-equality dialogues.
