--- a/public/data/team/13.md
+++ b/public/data/team/13.md
@@ -5,7 +5,7 @@ Daniel Maktabi – Technical Artist & Creative Technologist
 ## Full Details
 
 Technical Artist at DreamLab; former Asset Developer at Immersify Education; Technical Art Intern at MediaCity Immersive Technologies Innovation Hub.
-Expertise: Digital sculpting in ZBrush, real-time rendering and look development in Unreal Engine, 3D pipelines for characters, props and environments, facial motion capture, photogrammetry, Metahuman workflows, digital twins for virtual production.
+Digital sculpting in ZBrush, real-time rendering and look development in Unreal Engine, 3D pipelines for characters, props and environments, facial motion capture, photogrammetry, Metahuman workflows, digital twins for virtual production.
 Notable Work:
 
 Presented real-time facial mocap research at Manchester Animation Festival 2024 and MAF Marketplace.
