--- a/public/data/team/14.md
+++ b/public/data/team/14.md
@@ -4,7 +4,7 @@ Haydn Secker – Animation Producer
 
 ## Full Details
 
-Expertise: Over 25 years’ experience in stop-frame animation, writing, directing and producing across film, television, advertising and computer games. Skilled in every stage from script development through to on-set animation direction.
+Over 25 years’ experience in stop-frame animation, writing, directing and producing across film, television, advertising and computer games. Skilled in every stage from script development through to on-set animation direction.
 Notable Work:
 
 Producing Bernard, a BFI-funded animated short under the Lottery Short Film initiative.
