--- a/public/data/team/16.md
+++ b/public/data/team/16.md
@@ -4,7 +4,7 @@ David Afolabi – Cyber Compliance Analyst
 
 ## Full Details
 
-Expertise: ISO 27001 implementation, security compliance, governance, risk management and compliance (GRC), digital forensics and incident response (DFIR), vulnerability management, and security awareness training.
+ISO 27001 implementation, security compliance, governance, risk management and compliance (GRC), digital forensics and incident response (DFIR), vulnerability management, and security awareness training.
 Notable Work:
 
 Community Engagement Officer & Event Co-ordinator at DreamLab, delivering Meta Quest 3 VR demos and co-producing the BEYOND Conference showcase (Nov 2024).
