--- a/public/data/team/17.md
+++ b/public/data/team/17.md
@@ -14,4 +14,4 @@ Led creative pipelines and interactive tool development for educational VR at IN
 
 Delivered courses as a Unity Associate Instructor and supported tech-course facilitation as a Digital Technician.
 
-Freelance 3D artist at FrostyDoodlz, producing bespoke character and pet portraits in digital and traditional media.
+Bespoke character and pet portraits in digital and traditional media.
