--- a/public/data/team/24.md
+++ b/public/data/team/24.md
@@ -1,6 +1,6 @@
 # Headline
 
-Natasha DreamLab - Researcher & Artistic Producer
+Dr Natasha Stott - Researcher & Artistic Producer
 
 ## Full Details
 
