--- a/public/data/team/12.md
+++ b/public/data/team/12.md
@@ -1,11 +1,10 @@
 # Headline
 
-Bradley Harris – Chief Executive Officer, Krygon Studios
+Bradley Harris – Metahuman Specialist
 
 ## Full Details
 
-Role: CEO of Krygon Studios, leading the studio’s creative vision and business strategy.
-Expertise: Over 15 years in games and computer-graphics industries; specialises in 3D poly modelling, texturing, lighting and rendering for AAA console, mobile and franchise titles (including first-party Xbox and Star Wars). Adept at translating conceptual briefs into compelling visual narratives.
+Over 15 years in games and computer-graphics industries; specialises in 3D poly modelling, texturing, lighting and rendering for AAA console, mobile and franchise titles (including first-party Xbox and Star Wars). Adept at translating conceptual briefs into compelling visual narratives.
 Notable Work:
 
 Ghost Town Games contract artist (2020–24), Flipbook Studio and Factory Fifteen collaborations.
