--- a/public/data/team/15.md
+++ b/public/data/team/15.md
@@ -4,10 +4,7 @@ Garth Williams – Motion Capture Super Hero & Creative Director
 
 ## Full Details
 
-Motion Capture Super Hero (Freelance) at DreamLab’s MediaCity Immersive Technologies Innovation Hub.
-
-Creative Director at Safety Catch Ltd., leading collaborative story-making, theatre and outdoor arts.
-Expertise: Specialises in immersive installation design, Unreal Engine real-time pipelines, live performance capture with Rokoko Smartsuit V2 (Coil Pro trackers, Smartgloves, Headrig), Isadora integration, video editing and interactive media workshops.
+Collaborative story-making, theatre and outdoor arts. Specialises in immersive installation design, Unreal Engine real-time pipelines, live performance capture with Rokoko Smartsuit V2 (Coil Pro trackers, Smartgloves, Headrig), Isadora integration, video editing and interactive media workshops.
 Notable Work:
 
 Delivering bespoke motion-capture services for animation, VFX and live-streamed performances.
