--- a/public/data/team/29.md
+++ b/public/data/team/29.md
@@ -4,5 +4,4 @@ Bernard Steer - Spatial Audio Consultant
 
 ## Full Details
 
-Organization: Microcosmaudio Ltd / University of Salford / DreamLab, Manchester, UK
-Bio: ACI-certified Pro Tools trainer and 20+ year creative-tech demonstrator. Founder of compact Dolby Atmos/DTS-X monitoring solutions, and lead spatial-audio consultant supporting immersive-tech residencies at MediaCity’s DreamLab.
+ACI-certified Pro Tools trainer and 20+ year creative-tech demonstrator. Founder of compact Dolby Atmos/DTS-X monitoring solutions, and lead spatial-audio consultant supporting immersive-tech residencies at MediaCity’s DreamLab.
